# trussx

./: Cargo.toml  README.md
examples/: factor_of_safety.rs  simple.rs
src/: analysis.rs  conditions.rs  errors.rs  geometry.rs  lib.rs  main.rs  report.rs  truss.rs
tests/: cantilever.rs
