[package]
name = "trussx"
version = "0.2.0"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
description = "Utilities for designing and analyzing truss structures"
edition = "2021"
readme = "README.md"
repository = "https://github.com/cmccomb/trussx"
homepage = "https://github.com/cmccomb/trussx"
documentation = "https://docs.rs/trussx"
license = "MIT"
keywords = ["truss", "structural-analysis", "engineering"]
categories = ["mathematics", "science", "simulation"]

[dependencies]
petgraph = "0.8.3"
nalgebra = { version = "0.34.1", features = ["std"] }
thiserror = "2.0.17"

[dev-dependencies]
approx = "0.5"
